# yune

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.yue.md  README.zh-CN.md
.codex/: config.toml
.planning/: PROJECT.md  (+4 more)
crates/yune-rime-api/: Cargo.toml
crates/yune-rime-api/benches/: frontend_baselines.rs  native_inprocess_benchmark.rs
crates/yune-rime-api/src/: abi.rs  api_table.rs  candidate_api.rs  config.rs  config_api.rs  config_compiler.rs  context_api.rs  deployment.rs  key_table.rs  lib.rs  modules.rs  notifications.rs  resource_id.rs  schema_install.rs  schema_selection.rs  session.rs  startup_trace.rs  tests.rs  typeduck_web.rs  userdb.rs
crates/yune-rime-api/src/processors/: ascii_composer.rs  mod.rs  navigator.rs  punctuation.rs  recognizer.rs  selector.rs  shape.rs  speller.rs
crates/yune-rime-api/src/tests/: abi.rs  config_api.rs  deployment.rs  dictionary_data.rs  distribution_schema_comparison.rs  levers.rs  lifecycle_safety.rs  mod.rs  resource_id.rs  schema_api.rs  schema_processors.rs  schema_selection.rs  session_api.rs  userdb.rs
crates/yune-rime-api/src/tests/schema_selection/: reverse_lookup_filters.rs
crates/yune-rime-api/src/userdb/: mod.rs  sync.rs
crates/yune-rime-api/tests/: dynamic_loader.rs  frontend_client.rs  frontend_hosts.rs  native_memory_probe.rs  typeduck_profile_abi_surface.rs  typeduck_web.rs  typeduck_windows_boundary.rs  yune_web.rs  yune_windows_profile_abi_surface.rs
crates/yune-rime-api/tests/frontend_hosts/: mod.rs  native.rs  typeduck_web.rs
(+1090 files in other folders)
